@@ -26,6 +26,7 @@ t/00-compile/lib_Dist_Zilla_Plugin_Readme_Brief_pm.t
 t/00-report-prereqs.dd
 t/00-report-prereqs.t
 t/basic.t
+t/pod_file.t
 t/podname.t
 t/podnameci.t
 t/source_file.t
