@@ -12,6 +12,7 @@ my @files = (
     't/00-report-prereqs.dd',
     't/00-report-prereqs.t',
     't/basic.t',
+    't/pod_file.t',
     't/podname.t',
     't/podnameci.t',
     't/source_file.t'
