@@ -5,6 +5,9 @@ Release history for Dist-Zilla-Plugin-Readme-Brief
  - Dependencies changed since 0.002005, see misc/*.deps* for details
  - develop: +5 ↑3 -1 (suggests: ↑2)
 
+ [Features]
+ - Can now specify `source_file` which forces the name of a file to use instead of `main_module` ( aristotle++ #5 )
+
 0.002005 2015-03-04T15:21:15Z 03b80f3
  [Dependencies::Stats]
  - Dependencies changed since 0.002004, see misc/*.deps* for details
